2005-04-19  Mathieu Peltier  <mathieu.peltier@gmail.com>
	
	* Integrated ViewCVS PHP wrapper inspired from CVSweb and CodeX'
	ones into scmsvn plugin (task [#550])
	* Changed default SVN backend into fsfs (ViewCVS needs write
	permission with default backend)

2005-04-12  Christian Bayle <bayle@debian.org>
	
	* Added sys_apache_user sys_apache_group vars in local.inc
	and setup with a default value according to your distro (I hope so)

2005-04-10  Mathieu Peltier  <mathieu.peltier@gmail.com>

	* fixed bug [#1111]  FRSFile - Move to other release doesn't work
	right.

2005-03-27  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* docs/docbook/docbook/installation_guide/installation_guide.xml:
	Short section on BIND configuration.
	/var/www/gforge is inside <replaceable> now.

2005-03-25  Tim Perdue <tim@gforge.org>

	* Major docman changes, including nesting folders, ability to delete a file
	* Major tracker changes: Customize statuses (mapped to custom fields), 
	query page to develop and save complex filters, download .csv format from 
	tracker based on filters, custom template uploading to render the "extra fields"

2005-03-25  Christian Bayle <bayle@debian.org>

	* Removal of exit_assert_object function and replacement of all calls

2005-03-16  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* docs/docbook/docbook/installation_guide/installation_guide.xml: 
	Heavy restructuring and other changes.

2005-03-14  Tim Perdue <tim@gforge.org>

	* privatize_list.py - mailing lists set to private by default at 
	creation time and if they are set to private by www code
	* svn-stats.php fixed

2005-03-14  Tim Perdue <tim@gforge.org>

	* New "delete" function to permanently purge an entire project
	from the database and mailing lists and move cvs tree into a .deleted director
	* Ability to upload docs using the new FTP upload functionality

2005-03-11  Tim Perdue <tim@gforge.org>

	* fixed possible long-standing RBAC bug in Role.class so 