@@ -114,7 +114,7 @@ account_register	Preferences	Préférences
 account_register	ccode	Pays :
 account_register	communitymail	Recevoir du courrier électronique supplémentaire au sujet de la communauté. <i>(Faible trafic)</i>
 account_register	congrat	<p>Félicitations. Vous venez de vous enregistrer sur $1.</p><p>Vous allez recevoir un courrier électronique de confirmation pour vérifier votre adresse e-mail. Suivez le lien qui vous a été envoyé pour activer votre compte.</p>
-account_register	emailaddr	Adresse e-mail : <span><font color="red">*</font></span><br /><i>Cette adresse sera vérifiée avant l'activation de votre compte. Elle ne sera pas affichée sur le site. Une adresse de la forme &lt;loginname@$1&gt; qui redirigera le courrier sur votre adresse vous sera attribuée.</i>
+account_register	emailaddr	Adresse e-mail : <span><font color="red">*</font></span><br /><em>Cette adresse sera vérifiée avant l'activation de votre compte. Elle ne sera pas affichée sur le site. Une adresse de la forme &lt;loginname@$1&gt; qui redirigera le courrier sur votre adresse vous sera attribuée.</em>
 account_register	err_badinsert	L'insertion a échouée.
 account_register	err_email	Adresse e-mail non valide
 account_register	err_firstname	Vous devez saisir votre prénom
